--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
+    "@portabletext/types": "^2.0.13",
     "@sanity/astro": "^2.2.1",
     "@sanity/client": "^6.22.1",
+    "@sanity/core-loader": "^1.6.23",
     "@sanity/visual-editing": "^2.1.10",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.16.0",
+    "astro-portabletext": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.60.0",
