--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/vue": "^4.5.2",
     "@portabletext/types": "^2.0.13",
     "@sanity/astro": "^2.2.1",
     "@sanity/client": "^6.22.1",
