--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.2",
     "@astrojs/vue": "^4.5.2",
     "@portabletext/types": "^2.0.13",
     "@sanity/astro": "^2.2.1",
@@ -25,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.60.0",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3"
   }
 }
